Updated website addresses

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 </body>
 <footer style="text-align: center; padding: 10px;">
-    <a href="www.instagram.com" title="Instagram">Instagram | </a>
-    <a href="www.youtube.com" title="YouTube">YouTube | </a>
-    <a href="www.etsy.com" title="Etsy">Etsy</a>
+    <a href="https://www.instagram.com/" title="Instagram">Instagram | </a>
+    <a href="https://www.youtube.com/" title="YouTube">YouTube | </a>
+    <a href="https://www.etsy.com" title="Etsy">Etsy</a>
 </footer>
 </html>
