--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
 <body style="border: 20px solid pink; background-image: url('imagens/fundo.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat; background-attachment: fixed;">
 
-<h1 style="text-align: center; font-size: 50px;">Pulseiras da Amizade</h1>
+<h1 style="text-align: center; font-size: 50px;"><span style="background-color: pink;">Pulseiras da Amizade</span></h1>
+
+<div style="background-color: white; margin-right: 300px;margin-left: 300px; padding-top: 10px; padding-bottom: 10px;">
 <p style="text-align: center; font-size: 20px;">As pulseiras da amizade estão em alta e você não pode ficar de fora dessa!</p>
 <p style="text-align: center; font-size: 22px; ;">Conheça os nossos modelos:</p>
+</div>
 
 <table align="center">
 <tr>
@@ -23,6 +26,7 @@
 
 <button style="padding: 10px 20px; font-size: 16px; margin: 0 auto; display: block;">Adquira já as suas!</button>
 
+<div style="background-color: pink; margin-right: 300px; margin-left: 300px;"
 <p style="text-align: center; font-size: 22px;">Receba as ultimas novidades por e-mail:</p>
 <form style="margin: 0 auto; width: 50%; display: block;">
     <label for="fname">Nome:</label><br>
@@ -31,6 +35,7 @@
     <input type="text" id="lname" name="lname" value="E-mail" style="width: 75%;"><br><br>
     <input type="submit" value="Enviar">
   </form> 
+</div>
 
 </body>
 <footer style="text-align: center; padding: 10px;">
