--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </table><br>
 
 <button style="padding: 10px 20px; font-size: 16px; margin: 0 auto; display: block;">Adquira já as suas!</button>
-
-<div style="background-color: pink; margin-right: 300px; margin-left: 300px;"
+<br>
+<div style="background-color: pink; margin-right: 300px; margin-left: 300px;">
 <p style="text-align: center; font-size: 22px;">Receba as ultimas novidades por e-mail:</p>
 <form style="margin: 0 auto; width: 50%; display: block;">
     <label for="fname">Nome:</label><br>
